Starter: Fixed windows file path compatibility issues.